--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -48,3 +48,5 @@ encoding//CPU1_RAM/optimizerAssistant/opt_for_speed__5/subdir_vars.mk=UTF-8
 encoding//CPU1_RAM/sources.mk=UTF-8
 encoding//CPU1_RAM/subdir_rules.mk=UTF-8
 encoding//CPU1_RAM/subdir_vars.mk=UTF-8
+encoding//CPU1_RAM/uart/subdir_rules.mk=UTF-8
+encoding//CPU1_RAM/uart/subdir_vars.mk=UTF-8
