Add function to Change Reading Frequency Complere.!

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -17,3 +17,12 @@ encoding//CPU1_RAM/subdir_rules.mk=UTF-8
 encoding//CPU1_RAM/subdir_vars.mk=UTF-8
 encoding//CPU1_RAM/uart/subdir_rules.mk=UTF-8
 encoding//CPU1_RAM/uart/subdir_vars.mk=UTF-8
+encoding//CPU1_STANDALONE/device/subdir_rules.mk=UTF-8
+encoding//CPU1_STANDALONE/device/subdir_vars.mk=UTF-8
+encoding//CPU1_STANDALONE/makefile=UTF-8
+encoding//CPU1_STANDALONE/objects.mk=UTF-8
+encoding//CPU1_STANDALONE/sources.mk=UTF-8
+encoding//CPU1_STANDALONE/subdir_rules.mk=UTF-8
+encoding//CPU1_STANDALONE/subdir_vars.mk=UTF-8
+encoding//CPU1_STANDALONE/uart/subdir_rules.mk=UTF-8
+encoding//CPU1_STANDALONE/uart/subdir_vars.mk=UTF-8
