--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ CPU1_RAM/
 *.*~
 /CPU1_FLASH/
 /CPU1_STANDALONE/
+/CPU1_STANDALONE__opt_for_speed__0/
+/CPU1_STANDALONE__opt_for_speed__1/
+/CPU1_STANDALONE__opt_for_speed__2/
+/CPU1_STANDALONE__opt_for_speed__3/
+/CPU1_STANDALONE__opt_for_speed__4/
+/CPU1_STANDALONE__opt_for_speed__5/
