새로운 CCS를 설치하고 나서 수 많은 에러를 극복하고 다시 컴파일에 성공을 한 버전이다. syscfg를 사용했으나 아직 설정하지는 않았다.

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ CPU1_RAM/
 /CPU1_STANDALONE__opt_for_speed__3/
 /CPU1_STANDALONE__opt_for_speed__4/
 /CPU1_STANDALONE__opt_for_speed__5/
-Document/DIAGNOSTICSYSTEM_V1.DSNlck
-Document/diagnosticsystem_v1.opj 
+device/driverlib/
+Document/
