--- a/.project
+++ b/.project
@@ -35,6 +35,16 @@
 			<type>1</type>
 			<locationURI>INSTALLROOT_2837X/headers/cmd/F2837xD_Headers_nonBIOS_cpu1.cmd</locationURI>
 		</link>
+		<link>
+			<name>driverlib.lib</name>
+			<type>1</type>
+			<locationURI>COM_TI_C2000WARE_SOFTWARE_PACKAGE_INSTALL_DIR/driverlib/f2837xd/driverlib/ccs/Debug/driverlib.lib</locationURI>
+		</link>
+		<link>
+			<name>usblib.lib</name>
+			<type>1</type>
+			<locationURI>COM_TI_C2000WARE_SOFTWARE_PACKAGE_INSTALL_DIR/libraries/communications/usb/f2837xd/lib/usblib.lib</locationURI>
+		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
