1. Every Cmd_  command copy into main_1. 2. Next step is remove IPC Flag that we used for communication with 2 CPU.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -14,3 +14,4 @@ encoding//CPU1_STANDALONE/subdir_rules.mk=UTF-8
 encoding//CPU1_STANDALONE/subdir_vars.mk=UTF-8
 encoding//CPU1_STANDALONE/uart/subdir_rules.mk=UTF-8
 encoding//CPU1_STANDALONE/uart/subdir_vars.mk=UTF-8
+encoding/CmdLineExtend.c=UTF-8
